# type_checker2

./: .pre-commit-config.yaml  README.md  pyproject.toml
simple_type_check/: __init__.py  callable_info.py  checker.py  top_level_check.py  type_check.py
simple_type_check/default/: __init__.py  basic.py  complex.py
tests/: basic.py  complex.py  custom.py  dict.py  list_set.py  tuple.py  type_check.py  union.py
